--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "npx tailwindcss -i ./src/services/css/input.css -o ./src/services/css/style.css --watch",
+    "build:css": "npx tailwindcss -i ./src/services/css/input.css -o ./src/services/css/style.css",
     "start": "tsc && ts-node src/viewsCompiler.ts && electron dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,15 +14,21 @@
   "dependencies": {
     "@types/discord-rich-presence": "^0.0.0",
     "@types/shelljs": "^0.8.12",
+    "@xmcl/forge-site-parser": "^2.0.9",
+    "@xmcl/installer": "^5.1.0",
+    "axios": "^1.4.0",
     "discord-rich-presence": "^0.0.8",
     "ejs": "^3.1.9",
     "electron": "^25.3.0",
     "material-icons": "^1.13.8",
+    "minecraft-java-core": "^3.5.7",
     "minecraft-launcher-core": "^3.17.1",
+    "node-notifier": "^10.0.1",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
+    "@types/node-notifier": "^8.0.2",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
