--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:css": "npx tailwindcss -i ./src/services/css/input.css -o ./src/services/css/style.css",
-    "start": "tsc && ts-node src/viewsCompiler.ts && electron dist/index.js",
+    "start": "tsc && ts-node src/exclude/EJSCompiler.ts && electron dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,12 +20,10 @@
     "electron": "^25.3.0",
     "material-icons": "^1.13.8",
     "minecraft-java-core": "^3.5.7",
-    "node-notifier": "^10.0.1",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
-    "@types/node-notifier": "^8.0.2",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
