--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:css": "npx tailwindcss -i ./src/services/css/input.css -o ./src/services/css/style.css",
-    "start": "tsc && ts-node src/exclude/EJSCompiler.ts && electron dist/index.js",
+    "start": "tsc && ts-node src/exclude/pre.ts && electron dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/discord-rich-presence": "^0.0.0",
     "@types/shelljs": "^0.8.12",
+    "appdata-path": "^1.0.0",
     "axios": "^1.4.0",
     "discord-rich-presence": "^0.0.8",
     "ejs": "^3.1.9",
