Botao de abrir terminal

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "launcher-de-minecraft",
+  "name": "brlauncher",
   "version": "1.0.0",
-  "description": "Um launcher de minecraft",
+  "description": "Um launcher de Minecraft Brasileiro",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc & node dist/build",
+    "build": "npx electron-packager . BRLauncher --platform=win32 --arch=x64 --overwrite --out build/ & npx ts-node src/build-installer",
+    "setup": "npx ts-node src/build-installer",
     "build:css:dev": "npx tailwindcss -i ./src/core/css/input.css -o ./src/core/css/style.css --watch",
     "build:css": "npx tailwindcss -i ./src/core/css/input.css -o ./src/core/css/style.css",
     "start": "tsc && ts-node src/exclude/pre.ts && electron dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "VOTRON157",
+  "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@types/discord-rich-presence": "^0.0.0",
@@ -20,14 +21,17 @@
     "appdata-path": "^1.0.0",
     "axios": "^1.4.0",
     "discord-rich-presence": "^0.0.8",
+    "dotenv": "^16.3.1",
     "material-icons": "^1.13.8",
     "minecraft-java-core": "^3.5.7",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "electron-builder": "^24.4.0",
-    "electron": "^25.3.0",
     "@types/ejs": "^3.1.2",
+    "electron": "^25.3.0",
+    "electron-builder": "^24.4.0",
+    "electron-installer-windows": "^3.0.0",
+    "electron-wix-msi": "^5.0.0",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
