--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brlauncher",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Um launcher de Minecraft Brasileiro",
   "main": "dist/index.js",
   "scripts": {
@@ -20,14 +20,20 @@
     "@types/shelljs": "^0.8.12",
     "appdata-path": "^1.0.0",
     "axios": "^1.4.0",
+    "decompress": "^4.2.1",
     "discord-rich-presence": "^0.0.8",
     "dotenv": "^16.3.1",
     "material-icons": "^1.13.8",
     "minecraft-java-core": "^3.7.2",
-    "shelljs": "^0.8.5"
+    "semver": "^7.5.4",
+    "shelljs": "^0.8.5",
+    "unzipper": "^0.10.14"
   },
   "devDependencies": {
+    "@types/decompress": "^4.2.5",
     "@types/ejs": "^3.1.2",
+    "@types/semver": "^7.5.3",
+    "@types/unzipper": "^0.10.7",
     "electron": "^25.3.0",
     "electron-builder": "^24.4.0",
     "electron-installer-windows": "^3.0.0",
@@ -35,6 +41,7 @@
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
+    "typed-emitter": "^2.1.0",
     "typescript": "^5.1.6"
   }
 }
